--- a/config/rubocop/rubocop.yml
+++ b/config/rubocop/rubocop.yml
@@ -4,7 +4,8 @@ AllCops:
     - "node_modules/**/*" # rubocop config/default.yml
     - "vendor/**/*"       # rubocop config/default.yml
     - "db/schema.rb"
-
+     # 次を追加
+    - "bin/bundle"
 #################### Layout ################################
 
 # メソッドをグループ分けして書き順を揃えておくと読みやすくなる。
