--- a/config/database.yml
+++ b/config/database.yml
@@ -62,6 +62,7 @@ development:
 test:
   <<: *default
   database: pcparts_test
+  # host: localhost
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
