rspecのエラー修正

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,8 @@ services:
       - 3000:3000
     depends_on:
     - db
+    environment:
+      DATABASE_HOST: db
   nginx:
     build: .
     volumes:
