--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,15 @@
-version: 2.1
+
+# Ruby CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-ruby/ for more details
+#
+version: 2
 jobs:
-  rspec:
+  build:
     docker:
       - image: circleci/ruby:2.6.6-node-browsers
         environment:
+          BUNDLER_VERSION: 1.17.3
           RAILS_ENV: test
           POSTGRES_HOST: 127.0.0.1
       - image: circleci/postgres:9.4
@@ -11,63 +17,43 @@ jobs:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
 
+      # Specify service dependencies here if necessary
+      # CircleCI maintains a library of pre-built images
+      # documented at https://circleci.com/docs/2.0/circleci-images/
+      # - image: circleci/postgres:9.4
+
     working_directory: ~/pcparts
 
     steps:
       - checkout
+
+      # Download and cache dependencies
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "Gemfile.lock" }}-{{ checksum "yarn.lock" }}
             - v1-dependencies-{{ checksum "Gemfile.lock" }}
+            # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-      - run: gem install bundler:1.17.3
-      - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
-      - run: yarn install
+
+      - run:
+          name: install dependencies
+          command: |
+            gem install bundler -v 1.17.3
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
+            yarn install
+
       - save_cache:
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}-{{ checksum "yarn.lock" }}
           paths:
             - ./vendor/bundle
-            - ./node_modules
-      - run: bundle exec rails db:create RAILS_ENV=test
-      - run: bundle exec rails db:schema:load RAILS_ENV=test
+          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      # Database setup
+      - run: bundle exec rake db:create RAILS_ENV=test
+      - run: bundle exec rake db:schema:load RAILS_ENV=test
       - run: bundle exec bin/webpack
       - run:
           name: RSpec
           command: bundle exec rspec
-
-  rubocop:
-    docker:
-      - image: circleci/ruby:2.6.6-node-browsers
-        environment:
-          RAILS_ENV: test
-          POSTGRES_HOST: 127.0.0.1
-      - image: circleci/postgres:9.4
-        environment:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-
-    working_directory: ~/pcparts
-
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}-{{ checksum "yarn.lock" }}
-            - v1-dependencies-{{ checksum "Gemfile.lock" }}
-            - v1-dependencies-
-      - run: gem install bundler:1.17.3
-      - run: bundle install --jobs=4 --retry=3 --path vendor/bundle
-      - save_cache:
-          key: v1-dependencies-{{ checksum "Gemfile.lock" }}-{{ checksum "yarn.lock" }}
-          paths:
-            - ./vendor/bundle
       - run:
-          name: RuboCop
+          name: Rubocop
           command: bundle exec rubocop
-
-workflows:
-  version: 2
-  rspec_and_rubocop_and:
-    jobs:
-      - rspec
-      - rubocop
