--- a/config/database.yml
+++ b/config/database.yml
@@ -86,3 +86,4 @@ production:
   database: pcparts_production
   username: pcparts
   password: <%= ENV['PCPARTS_DATABASE_PASSWORD'] %>
+  host: <%= ENV['PCPARTS_DATABASE_HOSTNAME']%>
