--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "dependencies": {
     "@rails/webpacker": "5.2.1",
     "bootstrap-vue": "^2.21.2",
+    "debug": "^4.3.1",
+    "jquery": "^3.6.0",
+    "ms": "^2.1.3",
+    "popper.js": "^1.16.1",
+    "semver": "^7.3.5",
     "vue": "^2.6.12",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12"
