--- a/config/database.yml
+++ b/config/database.yml
@@ -87,4 +87,4 @@ production:
   username: pcparts
   password: <%= ENV['PCPARTS_DATABASE_PASSWORD'] %>
   host: <%= ENV['PCPARTS_DATABASE_HOSTNAME']%>
-  post: 5432
+  port: 5432
