--- a/config/database.yml
+++ b/config/database.yml
@@ -86,5 +86,5 @@ production:
   database: pcparts_production
   username: pcparts
   password: <%= ENV['PCPARTS_DATABASE_PASSWORD'] %>
-  host: <%= ENV['PCPARTS_DATABASE_HOSTNAME']%>i
+  host: <%= ENV['PCPARTS_DATABASE_HOSTNAME']%>
   port: 5432
