--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,3 +57,6 @@ jobs:
       - run:
           name: Rubocop
           command: bundle exec rubocop
+      - add_ssh_keys:
+          fingerprints:
+            - "7e:a5:ba:5b:56:a4:08:a5:61:40:92:87:2b:aa:7b:d0"
