--- a/config/database.yml
+++ b/config/database.yml
@@ -84,6 +84,6 @@ test:
 production:
   <<: *default
   database: pcparts_production
-  username: hiroki
+  username: postgres
   password: <%= Rails.application.credentials.db[:password] %>
   host: <%= Rails.application.credentials.db[:hostname] %>
