--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,4 +63,9 @@ jobs:
       - deploy:
           name: Capistrano deploy
           command: bundle exec cap production deploy
-      
+      - puma:
+          name: puma config
+          command: bundle exec cap production puma:config bundle exec cap production puma:systemd:config puma:systemd:enable
+      - nginx:
+          name: nginx config
+          command: bundle exec cap production puma:nginx_config
