config.ymlの不要な部分をコメントアウト

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,13 +60,13 @@ jobs:
       - add_ssh_keys:
           fingerprints:
             - "af:6a:59:80:3a:00:ad:5f:33:5b:27:5a:c6:58:e9:97"
-      - run:
-          name: puma config
-          command: | 
-            bundle exec cap production puma:config
-      - run:
-          name: nginx config
-          command: bundle exec cap production puma:nginx_config
+      # - run:
+      #     name: puma config
+      #     command: | 
+      #       bundle exec cap production puma:config
+      # - run:
+      #     name: nginx config
+      #     command: bundle exec cap production puma:nginx_config
       - deploy:
           name: Capistrano deploy
           command: bundle exec cap production deploy
