本番環境のパスワード読み込みの記載変更

--- a/config/database.yml
+++ b/config/database.yml
@@ -80,4 +80,4 @@ production:
   <<: *default
   database: pcparts_production
   username: postgres
-  password: <%= Rails.application.credentials.db[:password] %>
+  password: <%= ENV['DB_PASSWORD'] %>
