config.ymlにデプロイできるかテストの項目を追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,4 +68,4 @@ jobs:
       #     command: bundle exec cap production puma:nginx_config
       - deploy:
           name: Capistrano deploy
-          command: bundle exec cap production deploy
+          command: bundle exec cap production deploy:check
